@@ -20,6 +20,8 @@
 
         * VrmlMatrix: more doc-comment improvements.
 
+        * Move VrmlEvent to an unnamed namespace in ScriptJDK.cpp.
+
 2002-02-19  Braden McDaniel  <braden@endoframe.com>
 
         * VrmlMatrix: use std::copy instead of memcpy.
